--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "Groceries",
+  "name": "cincywwc-cross-platform",
   "version": "1.0.0",
-  "description": "A NativeScript-built iOS and Android app for managing grocery lists",
+  "description": "Sample NativeScript & Angular 2 app for CincyWWC workshop.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/nativescript/sample-Groceries.git"
+    "url": "https://github.com/CincyWWC/nativescript-angular2-workshop.git"
   },
   "keywords": [
-    "NativeScript"
+    "NativeScript",
+    "Angular 2"
   ],
-  "author": "TJ VanToll <tj.vantoll@gmail.com> (https://www.tjvantoll.com/)",
+  "author": "Tara Z. Manicsic <tzmanics@gmail.com> (https://www.tzmanics.com/)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/nativescript/sample-Groceries/issues"
+    "url": "https://github.com/CincyWWC/nativescript-angular2-workshop.git/issues"
   },
-  "homepage": "https://github.com/nativescript/sample-Groceries/groceries",
+  "homepage": "https://github.com/CincyWWC/nativescript-angular2-workshop.git",
   "nativescript": {
-    "id": "org.nativescript.groceries",
+    "id": "cincyWWc.nativescript-angular2",
     "tns-android": {
       "version": "2.3.0"
     },
